fix(ui): add gap between header register/signin buttons

--- a/client/css/_dashboard.scss
+++ b/client/css/_dashboard.scss
@@ -221,6 +221,7 @@
     &.signInRegisterButtons {
         height: auto;
         padding: 0 16px;
+        gap: 8px;
     }
 }
 
